# test_vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  curl_send_mail_tls.cpp  main.cpp  vcpkg.json
